--- a/app/globals.css
+++ b/app/globals.css
@@ -34,3 +34,13 @@ body {
 .header {
   background-color: transparent; /* Default background color */
 }
+.heroS{
+  background-image: url('/Blue Professional Doctor YouTube Thumbnail (2).png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.services_media{
+  clip-path: polygon(50% 0%, 100% 0, 100% 75%, 50% 100%, 0% 75%, 0 0);
+
+
+}
