--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,7 @@ body {
   background-size: cover;
   background-position: left bottom ;
   background-repeat: no-repeat;  */
-  background-color: white !important;
+  background-color: #174EA4 !important;
 }
 
 .header {
@@ -42,5 +42,144 @@ body {
 .services_media{
   clip-path: polygon(50% 0%, 100% 0, 100% 75%, 50% 100%, 0% 75%, 0 0);
 
+
+}
+
+@media screen and (min-width: 750px){
+  .about_points {
+    clip-path: polygon(0 0, 100% 0, 70% 100%, 0 100%);
+  
+  }
+  .review_wrapper,
+  .trust-badges-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 30px;
+    justify-content: center;
+  }
+  .social_media{
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+  }
+  .mapiframe{
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+  
+  }
+}
+@media screen and (max-width: 749px){
+  .review_wrapper,
+  .trust-badges-container{
+    display: grid;
+    grid-template-columns: 1fr ;
+    column-gap: 20px;
+    row-gap: 30px;
+    justify-content: center;
+  }
+  .social_media{
+    display: grid;
+    grid-template-columns: 1fr ;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.row{
+	display: flex;
+	flex-wrap: wrap;
+}
+ul{
+	list-style: none;
+}
+.footer{
+	background-color: #174EA4;
+    padding: 70px 5vw 0px 5vw;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 900;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #05A3F3;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li{
+  color: white;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	text-decoration: none;
+  color: white;
+	font-weight: 300;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+
+	height: 50px;
+	width: 50px;
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
+}
+.footer-col h4{
+	font-size: 24px;
+  font-weight: 900;
+}
+.footer{
+	background-color: #174EA4;
+    padding: 40px 5vw 20px 5vw;
+}
+}
+@media(max-width: 574px){
+  .footer-col{
+    width: 100%;
+}
+}
+.social-links a{
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
+.social-links {
+  display: flex;
 
 }
