--- a/app/globals.css
+++ b/app/globals.css
@@ -295,3 +295,7 @@ ul{
 .review_item {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+.social-links a:hover ~ svg,
+.social-links a:hover ~ svg path{
+  fill: white !important;
+}
